@@ -1,5 +1,6 @@
 package ua.vsevolod.lobby.feature.parkour;
 
+import net.kyori.adventure.sound.Sound;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextColor;
@@ -8,67 +9,124 @@ import net.minestom.server.coordinate.Pos;
 import net.minestom.server.entity.Player;
 import net.minestom.server.instance.InstanceContainer;
 import net.minestom.server.instance.block.Block;
+import net.minestom.server.network.packet.server.play.ParticlePacket;
+import net.minestom.server.particle.Particle;
+import net.minestom.server.potion.Potion;
+import net.minestom.server.potion.PotionEffect;
+import net.minestom.server.registry.RegistryKey;
+import net.minestom.server.sound.SoundEvent;
+import net.minestom.server.world.DimensionType;
 import ua.vsevolod.lobby.config.LobbyConfig;
 import ua.vsevolod.lobby.feature.parkour.leaderboard.ParkourRunResult;
 
-import java.util.ArrayDeque;
-import java.util.Deque;
+import java.util.ArrayList;
+import java.util.List;
 
 public final class ParkourSession {
 
     private static final TextColor PARKOUR_ORANGE = TextColor.color(0xF1BB58);
+    private static final int FALL_THRESHOLD = 3;
+    private static final int BLOCKS_AHEAD = 3;
+    private static final int BLOCKS_BEHIND = 0;
+    // Compact the allBlocks list when this many dead entries accumulate at the front.
+    // With BLOCKS_BEHIND=0 the live window is always ~4 entries, so after COMPACT_THRESHOLD
+    // steps the list shrinks back to ~4 instead of growing to hundreds.
+    private static final int COMPACT_THRESHOLD = 20;
 
     private final Player player;
-    private final InstanceContainer instance;
+    private InstanceContainer instance;
+    private RegistryKey<DimensionType> currentDimension;
     private final Pos spawn;
-    private final ParkourGenerator generator;
+    private ParkourGenerator generator;
+    private final ParkourDifficulty difficulty;
+    private ParkourTheme theme;
+    private final boolean trainingMode;
+    private ParkourSoundPreset soundPreset;
 
-    private final Deque<Point> activeBlocks = new ArrayDeque<>();
+    private static final Component HUD_SCORE_LABEL = Component.text("Очки ", PARKOUR_ORANGE);
+    private static final Component HUD_SEPARATOR = Component.text("  •  ", NamedTextColor.DARK_GRAY);
+    private static final Component HUD_TIME_LABEL = Component.text("Время ", PARKOUR_ORANGE);
+    private static final Component HUD_TRAINING = Component.text("  •  ", NamedTextColor.DARK_GRAY)
+            .append(Component.text("Тренировка", NamedTextColor.GRAY));
+
+    private final List<Point> allBlocks = new ArrayList<>();
+    private int headIndex = 0;
+    private int currentIndex = 0;
+    private int cachedMinY = Integer.MAX_VALUE;
 
     private long startTime;
     private int score;
     private int previousBestScore;
     private long previousBestDurationMillis;
-    private boolean finished;
+    private volatile boolean finished;
     private boolean surpassedPreviousBest;
+    volatile boolean dimensionChangeInProgress = false;
 
-    /**
-     * Last HUD frame we sent, so {@link #sendHud()} only allocates and emits an actionbar
-     * packet when the displayed text actually changes. The HUD shows score + seconds, so it
-     * naturally throttles to "one packet per score change OR per elapsed second" instead of
-     * one per movement packet (5–10/s). Prevents per-move actionbar spam.
-     */
     private int lastHudScore = Integer.MIN_VALUE;
     private long lastHudSecond = -1;
+    private long lastRecoveryTime;
 
     public ParkourSession(
             Player player,
             InstanceContainer instance,
             Pos spawn,
             int previousBestScore,
-            long previousBestDurationMillis
+            long previousBestDurationMillis,
+            ParkourDifficulty difficulty,
+            ParkourTheme theme,
+            boolean trainingMode,
+            ParkourSoundPreset soundPreset
     ) {
         this.player = player;
         this.instance = instance;
+        this.currentDimension = DimensionType.THE_END;
         this.spawn = spawn;
         this.previousBestScore = previousBestScore;
         this.previousBestDurationMillis = previousBestDurationMillis;
-        this.generator = new ParkourGenerator(ParkourTheme.randomTheme());
+        this.difficulty = difficulty;
+        this.theme = theme;
+        this.trainingMode = trainingMode;
+        this.soundPreset = soundPreset;
+        this.generator = new ParkourGenerator(theme, difficulty);
+    }
+
+    public void placeInitialBlocks() {
+        Point startBlock = new Pos(spawn.blockX(), spawn.blockY() - 1, spawn.blockZ());
+        allBlocks.add(startBlock);
+        currentIndex = 0;
+        headIndex = 0;
+        cachedMinY = startBlock.blockY();
+        instance.setBlock(startBlock.blockX(), startBlock.blockY(), startBlock.blockZ(), Block.STONE);
+
+        for (int i = 0; i < BLOCKS_AHEAD; i++) {
+            appendNextBlock();
+        }
     }
 
     public void start() {
         startTime = System.currentTimeMillis();
 
-        Point startBlock = new Pos(spawn.blockX(), spawn.blockY() - 1, spawn.blockZ());
-        activeBlocks.add(startBlock);
-        instance.setBlock(startBlock.blockX(), startBlock.blockY(), startBlock.blockZ(), Block.STONE);
-
-        for (int i = 0; i < LobbyConfig.Parkour.MAX_VISIBLE_BLOCKS - 1; i++) {
-            appendNextBlock();
-        }
+        player.setAllowFlying(false);
+        player.setFlying(false);
+        player.getInventory().clear();
+        player.addEffect(new Potion(PotionEffect.NIGHT_VISION, (byte) 0, Integer.MAX_VALUE));
+        player.getInventory().setItemStack(ParkourSettingsMenu.ITEM_SLOT, ParkourSettingsMenu.createItem());
+        player.getInventory().setItemStack(ParkourSettingsMenu.LEAVE_SLOT, ParkourSettingsMenu.createLeaveItem());
 
         player.sendMessage(ParkourService.PARKOUR_TEXT.append(Component.text("Паркур начался!", LobbyConfig.Project.WHITE_COLOR_TEXT_ORIGINAL)));
-        player.sendMessage(ParkourService.PARKOUR_TEXT.append(bestRecordMessage()));
+
+        Component diffLabel = Component.text("Режим: ", NamedTextColor.DARK_GRAY)
+                .append(Component.text(difficulty.displayName(), difficulty.color()));
+        if (trainingMode) {
+            diffLabel = diffLabel.append(Component.text(" (тренировка, без очков)", NamedTextColor.GRAY));
+        }
+        player.sendMessage(ParkourService.PARKOUR_TEXT.append(diffLabel));
+
+        if (!trainingMode) {
+            player.sendMessage(ParkourService.PARKOUR_TEXT.append(bestRecordMessage()));
+        }
+
+        playSound(soundPreset.start());
         sendHud();
     }
 
@@ -77,19 +135,22 @@ public final class ParkourSession {
             return;
         }
 
-        if (player.getPosition().y() < LobbyConfig.Parkour.FAIL_Y) {
+        int lowestVisibleY = lowestVisibleBlockY();
+        if (player.getPosition().y() < lowestVisibleY - FALL_THRESHOLD) {
+            if (trainingMode) {
+                long now = System.currentTimeMillis();
+                if (now - lastRecoveryTime > 1000) {
+                    recoverFromFall();
+                    lastRecoveryTime = now;
+                }
+                return;
+            }
             fail();
             return;
         }
 
-        Point under = new Pos(
-                player.getPosition().blockX(),
-                player.getPosition().blockY() - 1,
-                player.getPosition().blockZ()
-        );
-
         Point target = getNextTarget();
-        if (target != null && sameBlock(under, target)) {
+        if (target != null && playerOverlapsBlock(target)) {
             onReachBlock();
         }
 
@@ -106,34 +167,104 @@ public final class ParkourSession {
         );
     }
 
+    void swapTheme(ParkourTheme newTheme) {
+        this.theme = newTheme;
+        this.generator = new ParkourGenerator(newTheme, difficulty);
+        for (int i = headIndex; i < allBlocks.size(); i++) {
+            Point block = allBlocks.get(i);
+            instance.setBlock(block.blockX(), block.blockY(), block.blockZ(), newTheme.randomBlock());
+        }
+    }
+
+    private void recoverFromFall() {
+        Point safeBlock = allBlocks.get(currentIndex);
+        Pos safePos = new Pos(safeBlock.blockX() + 0.5, safeBlock.blockY() + 1.0, safeBlock.blockZ() + 0.5,
+                player.getPosition().yaw(), player.getPosition().pitch());
+        player.teleport(safePos);
+        playSound(soundPreset.recovery());
+    }
+
     private void onReachBlock() {
         score++;
+        currentIndex++;
         appendNextBlock();
+        removeOldTrailingBlocks();
 
-        while (activeBlocks.size() > LobbyConfig.Parkour.MAX_VISIBLE_BLOCKS) {
-            Point old = activeBlocks.removeFirst();
-            instance.setBlock(old.blockX(), old.blockY(), old.blockZ(), Block.AIR);
-        }
-
+        spawnLandingEffect();
         sendProgressMessage();
     }
 
+    private void removeOldTrailingBlocks() {
+        int firstKeep = currentIndex - BLOCKS_BEHIND;
+        boolean needRecalcMinY = false;
+        while (headIndex < firstKeep) {
+            Point old = allBlocks.get(headIndex);
+            instance.setBlock(old.blockX(), old.blockY(), old.blockZ(), Block.AIR);
+            if (old.blockY() <= cachedMinY) needRecalcMinY = true;
+            headIndex++;
+        }
+        if (needRecalcMinY) recalcMinY();
+
+        // Compact: once COMPACT_THRESHOLD dead entries pile up at the front, remove them.
+        // The live window is only ~(BLOCKS_AHEAD+1) entries, so this is O(live) not O(total).
+        if (headIndex >= COMPACT_THRESHOLD) {
+            allBlocks.subList(0, headIndex).clear();
+            currentIndex -= headIndex;
+            headIndex = 0;
+        }
+    }
+
+    private void recalcMinY() {
+        int minY = Integer.MAX_VALUE;
+        for (int i = headIndex; i < allBlocks.size(); i++) {
+            int y = allBlocks.get(i).blockY();
+            if (y < minY) minY = y;
+        }
+        cachedMinY = minY;
+    }
+
+    private int lowestVisibleBlockY() {
+        return cachedMinY;
+    }
+
+    private void spawnLandingEffect() {
+        Point landed = allBlocks.get(currentIndex);
+
+        Particle particle = switch (theme) {
+            case SKY -> Particle.CLOUD;
+            case LAVA, NETHER -> Particle.FLAME;
+            case FOREST, AUTUMN -> Particle.HAPPY_VILLAGER;
+            case VOID, MONOCHROME -> Particle.WITCH;
+            case CANDY -> Particle.HEART;
+            case OCEAN, SNOW -> Particle.SNOWFLAKE;
+            case DESERT -> Particle.WAX_ON;
+            case CRYSTAL -> Particle.END_ROD;
+        };
+
+        ParticlePacket packet = new ParticlePacket(
+                particle, false, false,
+                landed.blockX() + 0.5, landed.blockY() + 1.1, landed.blockZ() + 0.5,
+                0.25f, 0.05f, 0.25f,
+                0.01f, 6
+        );
+        player.sendPacket(packet);
+
+        playSound(soundPreset.landing(score));
+    }
+
     private void appendNextBlock() {
-        Point from = activeBlocks.getLast();
+        Point from = allBlocks.get(allBlocks.size() - 1);
         Point next = generator.next(from, score);
 
         instance.setBlock(next.blockX(), next.blockY(), next.blockZ(), generator.randomBlock());
-        activeBlocks.addLast(next);
+        allBlocks.add(next);
+        if (next.blockY() < cachedMinY) cachedMinY = next.blockY();
     }
 
     private Point getNextTarget() {
-        // Old impl: `activeBlocks.stream().skip(1).findFirst().orElse(null)` — allocated a
-        // Stream + skip pipeline + Optional on every PlayerMoveEvent during a parkour run.
-        // Iterator skip is zero-alloc.
-        if (activeBlocks.size() < 2) return null;
-        var it = activeBlocks.iterator();
-        it.next();
-        return it.next();
+        int nextIdx = currentIndex + 1;
+        if (nextIdx >= allBlocks.size()) return null;
+        return allBlocks.get(nextIdx);
     }
 
     private void fail() {
@@ -141,11 +272,21 @@ public final class ParkourSession {
 
         long elapsedMillis = elapsedMillis();
 
+        playSound(soundPreset.fail());
+
         player.sendMessage(Component.empty());
         player.sendMessage(ParkourService.PARKOUR_TEXT.append(Component.text("Забег завершен.", NamedTextColor.RED)));
         player.sendMessage(ParkourService.PARKOUR_TEXT.append(Component.text(score + " очк. за " + ParkourTimeFormatter.humanReadable(elapsedMillis), LobbyConfig.Project.WHITE_COLOR_TEXT_ORIGINAL)));
 
+        if (trainingMode) {
+            player.sendMessage(ParkourService.PARKOUR_TEXT.append(
+                    Component.text("Тренировочный режим — результат не записан.", NamedTextColor.GRAY)));
+            return;
+        }
+
         if (isNewBest(elapsedMillis)) {
+            playSound(soundPreset.newRecord());
+
             if (score > previousBestScore) {
                 int diff = score - previousBestScore;
                 player.sendMessage(ParkourService.PARKOUR_TEXT.append(
@@ -175,36 +316,79 @@ public final class ParkourSession {
     }
 
     private void sendHud() {
-        // Only emit when the visible content changed — score advancement or a new whole second
-        // on the timer. Without this guard we sent an actionbar packet PER PlayerMoveEvent
-        // (5–10/s on a moving player) even though the rendered text was identical 90% of the
-        // time. Both rebuilds the Component graph and pushes a network packet.
         long currentSecond = elapsedMillis() / 1000L;
         if (score == lastHudScore && currentSecond == lastHudSecond) return;
         lastHudScore = score;
         lastHudSecond = currentSecond;
 
-        Component hud = Component.text()
-                .append(Component.text("Очки ", PARKOUR_ORANGE))
+        var builder = Component.text()
+                .append(HUD_SCORE_LABEL)
                 .append(Component.text(score, LobbyConfig.Project.WHITE_COLOR_TEXT_ORIGINAL))
-                .append(Component.text("  •  ", NamedTextColor.DARK_GRAY))
-                .append(Component.text("Время ", PARKOUR_ORANGE))
-                .append(Component.text(ParkourTimeFormatter.compact(elapsedMillis()), LobbyConfig.Project.WHITE_COLOR_TEXT_ORIGINAL))
-                .build();
+                .append(HUD_SEPARATOR)
+                .append(HUD_TIME_LABEL)
+                .append(Component.text(ParkourTimeFormatter.compact(elapsedMillis()), LobbyConfig.Project.WHITE_COLOR_TEXT_ORIGINAL));
 
-        player.sendActionBar(hud);
+        if (trainingMode) builder.append(HUD_TRAINING);
+
+        player.sendActionBar(builder.build());
     }
 
     public boolean isFinished() {
         return finished;
     }
 
+    public boolean isScored() {
+        return !trainingMode;
+    }
+
+    public boolean isTrainingMode() {
+        return trainingMode;
+    }
+
+    public ParkourSoundPreset getSoundPreset() {
+        return soundPreset;
+    }
+
+    public void setSoundPreset(ParkourSoundPreset soundPreset) {
+        this.soundPreset = soundPreset;
+    }
+
+    public int getScore() {
+        return score;
+    }
+
     public int getBestScore() {
         return previousBestScore;
     }
 
+    public ParkourDifficulty getDifficulty() {
+        return difficulty;
+    }
+
+    public ParkourTheme getTheme() {
+        return theme;
+    }
+
     public InstanceContainer getInstance() {
         return instance;
+    }
+
+    public RegistryKey<DimensionType> getCurrentDimension() {
+        return currentDimension;
+    }
+
+    void setCurrentDimension(RegistryKey<DimensionType> dimension) {
+        this.currentDimension = dimension;
+    }
+
+    void swapInstance(InstanceContainer newInstance, RegistryKey<DimensionType> newDimension) {
+        for (int i = headIndex; i < allBlocks.size(); i++) {
+            Point block = allBlocks.get(i);
+            Block blockType = instance.getBlock(block);
+            newInstance.setBlock(block.blockX(), block.blockY(), block.blockZ(), blockType);
+        }
+        this.instance = newInstance;
+        this.currentDimension = newDimension;
     }
 
     private boolean isNewBest(long elapsedMillis) {
@@ -241,8 +425,9 @@ public final class ParkourSession {
     }
 
     private void sendProgressMessage() {
-        if (!surpassedPreviousBest && previousBestScore > 0 && score > previousBestScore) {
+        if (!surpassedPreviousBest && previousBestScore > 0 && score > previousBestScore && !trainingMode) {
             surpassedPreviousBest = true;
+            playSound(soundPreset.surpass());
             player.sendMessage(ParkourService.PARKOUR_TEXT.append(
                     Component.text("Ты уже превзошел свой лучший забег.", PARKOUR_ORANGE)
             ));
@@ -262,9 +447,24 @@ public final class ParkourSession {
         }
     }
 
-    private boolean sameBlock(Point a, Point b) {
-        return a.blockX() == b.blockX()
-                && a.blockY() == b.blockY()
-                && a.blockZ() == b.blockZ();
+    private void playSound(Sound sound) {
+        if (sound != null) player.playSound(sound);
+    }
+
+    private static final double HALF_WIDTH = 0.3;
+
+    private boolean playerOverlapsBlock(Point block) {
+        double px = player.getPosition().x();
+        double py = player.getPosition().y();
+        double pz = player.getPosition().z();
+        int feetY = (int) Math.floor(py) - 1;
+        if (feetY != block.blockY()) return false;
+        int minX = (int) Math.floor(px - HALF_WIDTH);
+        int maxX = (int) Math.floor(px + HALF_WIDTH);
+        int minZ = (int) Math.floor(pz - HALF_WIDTH);
+        int maxZ = (int) Math.floor(pz + HALF_WIDTH);
+        int bx = block.blockX();
+        int bz = block.blockZ();
+        return bx >= minX && bx <= maxX && bz >= minZ && bz <= maxZ;
     }
 }
